After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710408 - doesn't highlight nick when my current nick has an underscore
doesn't highlight nick when my current nick has an underscore
Status: RESOLVED FIXED
Product: polari
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Polari maintainers
Polari maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-17 18:44 UTC by William Jon McCann
Modified: 2013-10-17 21:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
room: Make highlighting a bit smarter (3.75 KB, patch)
2013-10-17 21:37 UTC, Florian Müllner
committed Details | Review

Description William Jon McCann 2013-10-17 18:44:32 UTC
If I connect to IRC using the fallback nick "mccann_" because my usual nick is timing out or whatever then I don't get notifications for mentions of "mccann".
Comment 1 Florian Müllner 2013-10-17 21:37:24 UTC
Created attachment 257606 [details] [review]
room: Make highlighting a bit smarter

Not everyone is paying close attention to nick changes (or doesn't use
tab completion for mentions), so we should be more forgiving when matching
messages. In particular users may be connected with multiple clients, or
get '_' automatically appended to their nick after reconnecting - handle
these cases by stripping all non-alphanumeric characters from the matched
nick. This still doesn't handle cases like 'nick-away', 'nick|lunch' etc.,
but it is a clear improvement over the current behavior.
Comment 2 Florian Müllner 2013-10-17 21:38:52 UTC
Attachment 257606 [details] pushed as cc7042f - room: Make highlighting a bit smarter