room: Make highlighting a bit smarter

Not everyone is paying close attention to nick changes (or doesn't use
tab completion for mentions), so we should be more forgiving when matching
messages. In particular users may be connected with multiple clients, or
get '_' automatically appended to their nick after reconnecting - handle
these cases by stripping all non-alphanumeric characters from the matched
nick. This still doesn't handle cases like 'nick-away', 'nick|lunch' etc.,
but it is a clear improvement over the current behavior.

https://bugzilla.gnome.org/show_bug.cgi?id=710408